# outils_gestion

outils_gestion/: README.md  pyproject.toml
outils_gestion/outils_gestion/: hooks.py  modules.txt
outils_gestion/outils_gestion/outils_gestion/dashboard_chart/avances_paie_par_utilisateur/: avances_paie_par_utilisateur.json
outils_gestion/outils_gestion/outils_gestion/dashboard_chart/dépenses_par_type/: dépenses_par_type.json
outils_gestion/outils_gestion/outils_gestion/dashboard_chart/dépenses_par_type___mois/: dépenses_par_type___mois.json
outils_gestion/outils_gestion/outils_gestion/dashboard_chart/dépenses_par_véhicule___mois/: dépenses_par_véhicule___mois.json
outils_gestion/outils_gestion/outils_gestion/dashboard_chart/livraisons_par_véhicule/: livraisons_par_véhicule.json
outils_gestion/outils_gestion/outils_gestion/dashboard_chart/paiements_par_utilisateur___espèce/: paiements_par_utilisateur___espèce.json
outils_gestion/outils_gestion/outils_gestion/dashboard_chart/total_avances_paie_par_utilisateur/: total_avances_paie_par_utilisateur.json
outils_gestion/outils_gestion/outils_gestion/doctype/avances_paie/: avances_paie.js  avances_paie.json  avances_paie.py  test_avances_paie.py
outils_gestion/outils_gestion/outils_gestion/doctype/depenses/: depenses.js  depenses.json  depenses.py  test_depenses.py
outils_gestion/outils_gestion/outils_gestion/doctype/odometre/: odometre.js  odometre.json  odometre.py  test_odometre.py
outils_gestion/outils_gestion/outils_gestion/doctype/paiements_livraisons/: paiements_livraisons.js  paiements_livraisons.py  (+2 more)
(+22 files in other folders)
